# zeta

./: .gitignore  CMakeLists.txt  MANUAL.md  Makefile  README.md  analyzer.c  analyzer.h  codegen.c  codegen.h  lexer.c  lexer.h  llvmgen.c  llvmgen.h  main.c  parser.c  parser.h  platform.h  zc_main.c
.github/workflows/: release.yml
bench/: prime.c  prime.py  prime.rs  run.ps1  run.sh
editors/jetbrains/: README.md
editors/jetbrains/zeta-lang.tmbundle/: info.plist
editors/jetbrains/zeta-lang.tmbundle/Syntaxes/: z.tmLanguage
examples/: fibonacci.z  hello.z  list_ops.z  pointers.z  primes.z  ranges.z  structs.z
